# healthcare

./: pyproject.toml
Healthcare.egg-info/: SOURCES.txt
src/: app.py
src/model/: doctor.py
src/view/: healthcare_view.py
